<resources>
    <string name="app_name">appkotlin</string>
    <string name="bank">Crédit Mutuel</string>
    <string name="connexion">Se connecter </string>
    <string name="no_account">Vous n\'avez pas de compte ?</string>
    <string name="inscription">S\'inscrire</string>
    <string name="password">Mot de passe</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="mail_adress">Adresse mail</string>
    <string name="logo">logo</string>
    <string name="main_account">My accounts</string>
    <string name="textview">TextView</string>
    <string name="button_7">7</string>
    <string name="button_4">4</string>
    <string name="button_9">9</string>
    <string name="button_6">6</string>
    <string name="button_8">8</string>
    <string name="button_2">2</string>
    <string name="button_delete">⍇</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_3">3</string>
    <string name="button_5">5</string>
    <string name="tapez_votre_code_de_securite">Tapez votre code de sécurité</string>
    <string name="valider">Valider</string>
    <string name="refresh">Refresh</string>


</resources>