<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/pinMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="onClickPinButton"
        android:text="@string/button_5"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button4" />

    <Button
        android:id="@+id/buttonEmpty"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="35dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="onClickPinButton"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/button0"
        app:layout_constraintStart_toStartOf="@+id/button7"
        app:layout_constraintTop_toTopOf="@+id/button0"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="onClickPinButton"
        android:textSize="25sp"
        app:icon="@drawable/abc_vector_test"
        app:layout_constraintBottom_toBottomOf="@+id/button0"
        app:layout_constraintEnd_toEndOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toTopOf="@+id/button0" />

    <Button
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="35dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="onClickPinButton"
        android:text="@string/button_7"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toTopOf="@+id/button8"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="onClickPinButton"
        android:text="@string/button_2"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button1" />

    <Button
        android:id="@+id/button0"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="onClickPinButton"
        android:text="@string/button_0"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSubmit"
        app:layout_constraintEnd_toStartOf="@+id/buttonDelete"
        app:layout_constraintStart_toEndOf="@+id/buttonEmpty" />

    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginStart="83dp"
        android:layout_marginEnd="35dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="onClickPinButton"
        android:text="@string/button_1"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button2" />

    <Button
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="onClickPinButton"
        android:text="@string/button_8"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/button7" />

    <Button
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="onClickPinButton"
        android:text="@string/button_6"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toTopOf="@+id/button5" />

    <Button
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="onClickPinButton"
        android:text="@string/button_9"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toTopOf="@+id/button8"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginEnd="35dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="onClickPinButton"
        android:text="@string/button_4"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toStartOf="@+id/button1"
        app:layout_constraintTop_toTopOf="@+id/button5" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="79dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="onClickPinButton"
        android:text="@string/button_3"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        app:layout_constraintStart_toEndOf="@+id/radioButton1"
        app:layout_constraintTop_toTopOf="@+id/radioButton1" />

    <RadioButton
        android:id="@+id/radioButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="20dp"
        android:checked="false"
        android:enabled="false"
        android:onClick="onClickPinButton"
        app:layout_constraintStart_toStartOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/TapSecurityCode" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        app:layout_constraintStart_toEndOf="@+id/radioButton2"
        app:layout_constraintTop_toTopOf="@+id/radioButton2" />

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        app:layout_constraintStart_toEndOf="@+id/radioButton3"
        app:layout_constraintTop_toTopOf="@+id/radioButton3" />

    <TextView
        android:id="@+id/TapSecurityCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tapez_votre_code_de_securite"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:onClick="onClickPinButton"
        android:text="@string/valider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonDelete"
        app:layout_constraintStart_toStartOf="@+id/buttonEmpty" />

</androidx.constraintlayout.widget.ConstraintLayout>